--- a/{{cookiecutter.project_name}}/project.org
+++ b/{{cookiecutter.project_name}}/project.org
@@ -12,7 +12,7 @@
 
 ** Environments
 
-*** Common
+*** common
 
 **** Pip
 
@@ -22,6 +22,7 @@
 **** Conda
 
 #+begin_src fundamental :tangle configs/common.env.yaml
+name: {{cookiecutter.project_name}}.common
 channels:
   - conda-forge
   - defaults
